Added links bottom of index.html

--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Linda-neves" target="_blank"
+            >Linda Neves</a
+          >
+          and is
+          <a
+            href="https://github.com/Linda-neves/SheCodes-challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://app.netlify.com/teams/linda-neves/sites"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
